Update fix IE sur .col-noalign
Transformation d'un table-cell en flottant pour vieux IE.

--- a/sass/rocssti-mobile-first.scss
+++ b/sass/rocssti-mobile-first.scss
@@ -1033,7 +1033,9 @@ select:focus:required:valid {
 }
 
 .ie7 .col,
-.ie6 .col {
+.ie7 .col-noalign,
+.ie6 .col,
+.ie6 .col-noalign {
   float: left;
 }
 .ie7 .row,
